# minishell

./: CMakeLists.txt  README.md  main.c  minishell.c  minishell.h
src/: job.c  job.h  main.c  minishell.c  minishell.h  out.txt  process.h
