cmake_minimum_required(VERSION 3.22)
project(minishell C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_COMPILER /usr/bin/gcc)

include_directories(/usr/include/readline)
include_directories(/usr/lib64/libtinfo)
file(GLOB SOURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaa
URCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaaURCES "./*.c")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lreadline -ltinfo")
add_executable(minishell main.c)
target_link_libraries(minishell readline tinfo)
aaaaaaaaaaaa
